test: docker run with mapping

--- a/flask_app/Dockerfile
+++ b/flask_app/Dockerfile
@@ -3,8 +3,8 @@ FROM python:3.9-rc-buster
 
 WORKDIR /code
 
-ENV FLASK_APP app.py
-ENV FLASK_RUN_HOST 0.0.0.0
+ENV FLASK_APP=app.py
+ENV FLASK_RUN_HOST=0.0.0.0
 ###
 
 
@@ -19,3 +19,6 @@ COPY . .
 
 
 CMD ["flask", "run"]
+
+#docker build -t flask_app:1.0 .
+#docker run -port 4000:5000 flask_app:1.0 
