--- a/flask_app/docker-compose.yml
+++ b/flask_app/docker-compose.yml
@@ -24,7 +24,9 @@ services:
   database:
 
     # image to fetch from docker hub
-    image: mysql/mysql-server:5.7
+    build:
+      context: ./db
+      dockerfile: Dockerfile-db
 
     # Environment variables for startup script
     # container will use these variables
